--- a/presentation.tex
+++ b/presentation.tex
@@ -5,16 +5,24 @@
 \usepackage[none]{hyphenat} % Avoids to go out of margin
 \usetheme{metropolis}           % Use metropolis theme
 \title{Planning and Executing Humanoid Gaits\\in a World of Stairs}
-\subtitle{Michele Cipriano}
+%\subtitle{Michele Cipriano}
 %\date{\today}
-\date{January 21, 2020}
+\date{}
 %\author{Michele Cipriano}
 \author{
-  \textbf{Thesis Advisor:} Prof. Giuseppe Oriolo
+  \textbf{Candidate:} Michele Cipriano \\
+	\textbf{Thesis Advisor:} Prof. Giuseppe Oriolo\\
+	January 21, 2020
 }
-\institute{Master Degree in Artificial Intelligence and Robotics\\
+\institute{
+	\vspace{-0.4cm}
+	\begin{center}
+    \includegraphics[scale = 0.5]{figures/SapienzaLogo.pdf}\\
+	\end{center}
+	Master Degree in Artificial Intelligence and Robotics\\
   Department of Computer, Control and Management
-  Engineering\\Sapienza University of Rome}
+  Engineering\\Sapienza University of Rome
+}
 
 % Fontsize of figure smaller than normalsize:
 \setbeamerfont{caption}{size=\scriptsize}
