--- a/presentation.tex
+++ b/presentation.tex
@@ -45,9 +45,10 @@
 \begin{frame}{Block Scheme}
 	\begin{itemize}
 	  \item \texttt{elevation\_mapping}: autonomously build a map $\mathcal{M}_z$
-		\item RRT-based footstep planner: generate a footstep sequence $\{\bff^j\}$
+		\item \textbf{RRT-based footstep planner}:
+				generate a footstep sequence $\{\bff^j\}$
 		    together with swing foot trajectories $\{\bfp_{\rm swg}^*\}$
-		\item variable-height CoM IS-MPC: realize a stable trajectory
+		\item \textbf{variable-height CoM IS-MPC}: realize a stable trajectory
 		    $\bfp_{\rm CoM}^*$
 	\end{itemize}
   \begin{figure}
@@ -62,7 +63,8 @@
   \begin{columns}[c,onlytextwidth]
 	  \column{0.7\textwidth}
       \begin{itemize}
-        \item LIP model not suitable for gait generation over uneven terrain
+        \item \textbf{LIP} model not suitable for gait generation over
+						\textbf{uneven terrain}
 				\item constraint vertical motion such that
 			    \begin{equation*}
             \frac{\ddot{z}_c + g}{z_c - z_z} = \omega^2
@@ -88,7 +90,7 @@
   \begin{columns}[c,onlytextwidth]
 	  \column{0.65\textwidth}
 			\begin{itemize}
-			  \item constrain ZMP into subregion of polyhedral cone (box)
+			  \item \textbf{constrain ZMP} into subregion of polyhedral cone (box)
 					\begin{equation*}
 %						-\frac{1}{2}
 %						\begin{pmatrix}
@@ -111,13 +113,13 @@
 							d_z^\text{z}
 						\end{pmatrix}
 					\end{equation*}
-				\item bound CoM wrt ZMP (LIP stability)
+				\item bound CoM wrt ZMP (\textbf{LIP stability})
 					\begin{equation*}
 						\frac{1}{\omega}\frac{1-e^{-\delta\omega}}{1-e^{-N\delta\omega}}
 							\sum_{i=0}^{N-1} e^{-i\delta\omega} \dot{x}_z^{k+i} =
 							x_c^k + \frac{\dot{x}_c^k}{\omega} - x_z^k
 					\end{equation*}
-			  \item solve QP problem using MPC scheme
+			  \item solve \textbf{QP problem} using \textbf{MPC} scheme
 			\end{itemize}
 		\column{0.35\textwidth}
 		  \begin{figure}
@@ -130,7 +132,7 @@
 	\end{columns}
 \end{frame}
 
-\begin{frame}{Variable Height CoM IS-MPC: Experiments}
+\begin{frame}{Variable Height CoM IS-MPC: Stair Climbing}
 	\begin{figure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
@@ -171,7 +173,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Variable Height CoM IS-MPC: Experiments}	
+\begin{frame}{Variable Height CoM IS-MPC: Stair Climbing}	
 	\begin{figure}
 		\centering
 		%\includegraphics[width=0.5\textwidth]
@@ -225,7 +227,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{RRT-based Footstep Planning: Experiments}
+\begin{frame}{RRT-based Footstep Planning: Obstacle Avoidance}
 	\begin{figure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
