Obstacle Avoidance - Footstep Plan

--- a/presentation.tex
+++ b/presentation.tex
@@ -263,6 +263,18 @@
 	\end{figure}
 \end{frame}
 
+\begin{frame}{RRT-based Footstep Planning: Obstacle Avoidance}
+	\begin{center}
+    tree size: 488 -- solution size: 31 -- runtime: 70 ms
+  \end{center}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\textwidth]
+				{figures/experiments/obstacle-avoidance/footstep-plan.pdf}
+		\caption{Footstep plan generated for the scenario ``Obstacle Avoidance''.}
+	\end{figure}
+\end{frame}
+
 \begin{frame}{Elevation Map Generation}
   \texttt{elevation\_mapping}, features, how it works (briefly).
   Settings: NAO + Xtion + \textit{World of Stairs}.
