Image size changed, pdf smaller

--- a/presentation.tex
+++ b/presentation.tex
@@ -136,32 +136,32 @@
 	\begin{figure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/multiple-staircases/downstairs/video/01.png}
+				{figures/experiments/multiple-staircases/downstairs/video/01.jpeg}
 			%\caption{Starting position}
 		\end{subfigure}\hspace*{0.05cm}%{\fill}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/multiple-staircases/downstairs/video/02.png}
+				{figures/experiments/multiple-staircases/downstairs/video/02.jpeg}
 			%\caption{First step}
 		\end{subfigure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/multiple-staircases/downstairs/video/03.png}
+				{figures/experiments/multiple-staircases/downstairs/video/03.jpeg}
 			%\caption{Second step}
 		\end{subfigure}\hspace*{0.05cm}%{\fill}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/multiple-staircases/downstairs/video/04.png}
+				{figures/experiments/multiple-staircases/downstairs/video/04.jpeg}
 			%\caption{Third step}
 		\end{subfigure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/multiple-staircases/downstairs/video/05.png}
+				{figures/experiments/multiple-staircases/downstairs/video/05.jpeg}
 			%\caption{Fourth step}
 		\end{subfigure}\hspace*{0.05cm}%{\fill}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/multiple-staircases/downstairs/video/06.png}
+				{figures/experiments/multiple-staircases/downstairs/video/06.jpeg}
 			%\caption{Fifth step}
 		\end{subfigure}
 		\caption{NAO going down the stairs.}
@@ -312,32 +312,32 @@
 	\begin{figure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/unknown-env/video/01.png}
+				{figures/experiments/unknown-env/video/01.jpeg}
 			%\caption{Starting position}
 		\end{subfigure}\hspace{0.05cm}%*{\fill}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/unknown-env/video/02.png}
+				{figures/experiments/unknown-env/video/02.jpeg}
 			%\caption{First step}
 		\end{subfigure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/unknown-env/video/03.png}
+				{figures/experiments/unknown-env/video/03.jpeg}
 			%\caption{Second step}
 		\end{subfigure}\hspace{0.05cm}%*{\fill}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/unknown-env/video/04.png}
+				{figures/experiments/unknown-env/video/04.jpeg}
 			%\caption{Third step}
 		\end{subfigure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/unknown-env/video/05.png}
+				{figures/experiments/unknown-env/video/05.jpeg}
 			%\caption{Fourth step}
 		\end{subfigure}\hspace{0.05cm}%*{\fill}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
-				{figures/experiments/unknown-env/video/06.png}
+				{figures/experiments/unknown-env/video/06.jpeg}
 			%\caption{Fifth step}
 		\end{subfigure}
 		\caption{NAO climbing the stairs in an unknown environment.}
