--- a/presentation.tex
+++ b/presentation.tex
@@ -39,7 +39,13 @@
 \justifying
 
 \begin{frame}{Introduction}
-  Abstract. Humanoid Robot Locomotion Problem.
+	\begin{itemize}
+		\item humanoid robot locomotion in an unknown \textit{World of Stairs}
+		\item \textbf{mapping:} perceive the surrounding world
+		\item \textbf{planning:} generate a sequence of motion primitives
+		\item \textbf{control:} correctly execute the motion
+		\item NAO humanoid robot equipped with a depth sensor
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Block Scheme}
