--- a/presentation.tex
+++ b/presentation.tex
@@ -44,7 +44,9 @@
 		\item \textbf{mapping:} perceive the surrounding world
 		\item \textbf{planning:} generate a sequence of motion primitives
 		\item \textbf{control:} correctly execute the motion
-		\item NAO humanoid robot equipped with a depth sensor
+		\item NAO humanoid robot equipped with a \textbf{depth} sensor
+		\item \textbf{goal:} make NAO autonomously climb stairs in an unknown
+				\textit{World of Stairs} environment
 	\end{itemize}
 \end{frame}
 
