--- a/presentation.tex
+++ b/presentation.tex
@@ -389,8 +389,14 @@
   Video
 \end{frame}
 
-\begin{frame}{Conclusion}
-  Results. Future Works.
+\begin{frame}{Conclusion: Results and Future Works}
+  \begin{itemize}
+		\item NAO is able to autonomously climb the stairs in an unknown
+				\textit{World of Stairs} environment
+		\item \textbf{localization} module and \textbf{continuous mapping}
+		\item \textbf{replanning} phase
+		\item dynamic and rough environments
+	\end{itemize}
 \end{frame}
 
 \begin{frame}[standout]
