--- a/presentation.tex
+++ b/presentation.tex
@@ -78,6 +78,18 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}{Elevation Map Building: Results}
+  \begin{itemize}
+		\item ASUS Xtion Pro (\textbf{depth} sensor)
+		\item working range: 0.5--3.5 m
+  \end{itemize}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.48\textwidth]{figures/elevmap_pic.jpg}
+    \includegraphics[width=0.48\textwidth]{figures/elevmap_rviz.png}
+  \end{figure}
+\end{frame}
+
 \begin{frame}{Variable Height CoM IS-MPC: 3D Motion Model}
   \begin{columns}[c,onlytextwidth]
 	  \column{0.7\textwidth}
