--- a/presentation.tex
+++ b/presentation.tex
@@ -115,6 +115,14 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}{Footstep Planner: Primitives Catalogue $U$}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\textwidth]{figures/catalogue-primitives.pdf}
+	\end{figure}
+\end{frame}
+
+
 \begin{frame}{Variable Height CoM IS-MPC: 3D Motion Model}
   \begin{columns}[c,onlytextwidth]
 	  \column{0.7\textwidth}
