Footstep Planner: Results updates

--- a/presentation.tex
+++ b/presentation.tex
@@ -122,6 +122,27 @@
 	\end{figure}
 \end{frame}
 
+\begin{frame}{Footstep Planner: Results (stair climbing)}
+  \begin{center}
+    tree size: 10 -- solution size: 6 -- runtime: 0.8 ms
+  \end{center}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\textwidth]
+				{figures/experiments/simple-stairs/footstep-plan.pdf}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Footstep Planner: Results (obstacle avoidance)}
+  \begin{center}
+    tree size: 488 -- solution size: 31 -- runtime: 70 ms
+  \end{center}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\textwidth]
+				{figures/experiments/obstacle-avoidance/footstep-plan.pdf}
+	\end{figure}
+\end{frame}
 
 \begin{frame}{Variable Height CoM IS-MPC: 3D Motion Model}
   \begin{columns}[c,onlytextwidth]
