--- a/presentation.tex
+++ b/presentation.tex
@@ -376,13 +376,16 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Conclusion: Results and Future Works}
+\begin{frame}{Conclusions}
   \begin{itemize}
 		\item NAO is able to autonomously climb the stairs in an unknown
 				\textit{World of Stairs} environment
-		\item \textbf{localization} module and \textbf{continuous mapping}
-		\item \textbf{replanning} phase
-		\item dynamic and rough environments
+    \item future works
+    \begin{itemize}
+      \item \textbf{localization} module and \textbf{continuous mapping}
+		  \item \textbf{replanning} phase
+		  \item dynamic and rough environments
+    \end{itemize}
 	\end{itemize}
 \end{frame}
 
