--- a/presentation.tex
+++ b/presentation.tex
@@ -90,7 +90,7 @@
   \end{figure}
 \end{frame}
 
-\begin{frame}{Footstep Planner}
+\begin{frame}{Footstep Planner: Algorithm}
   \begin{itemize}
     \item requirements
       \begin{itemize}[<alert@+>]
@@ -236,7 +236,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Variable Height CoM IS-MPC: Stair Climbing}
+\begin{frame}{Experiment: Downstairs}
 	\begin{figure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
@@ -277,7 +277,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Variable Height CoM IS-MPC: Stair Climbing}	
+\begin{frame}{Experiment: Downstairs}	
 	\begin{figure}
 		\centering
 		%\includegraphics[width=0.5\textwidth]
@@ -291,7 +291,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{RRT-based Footstep Planning: Obstacle Avoidance}
+\begin{frame}{Experiment: Obstacle Avoidance}
 	\begin{figure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
@@ -327,7 +327,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Stair Climbing in Unknown Environment}
+\begin{frame}{Experiment: Unknown Environment}
 	\begin{figure}
 		\begin{subfigure}{0.40\textwidth}
 			\includegraphics[width=\linewidth]
@@ -363,7 +363,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Stair Climbing in Unknown Environment: Footstep Plan}
+\begin{frame}{Experiment: Unknown Environment}
 	\begin{center}
     tree size: 454 -- solution size: 10 -- runtime: 331 ms
   \end{center}
@@ -374,6 +374,10 @@
 		%\caption{Footstep plan generated for the scenario ``Stair Climbing in
 		%		Unknown Environment''.}
 	\end{figure}
+\end{frame}
+
+\begin{frame}[standout]
+  Video
 \end{frame}
 
 \begin{frame}{Conclusions}
