--- a/presentation.tex
+++ b/presentation.tex
@@ -236,7 +236,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Experiment: Downstairs}
+\begin{frame}{Experiment 1: Downstairs}
 	\begin{figure}
 		\begin{subfigure}{0.42\textwidth}
 			\includegraphics[width=\linewidth]
@@ -277,7 +277,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Experiment: Downstairs}	
+\begin{frame}{Experiment 1: Downstairs}	
 	\begin{figure}
 		\centering
 		%\includegraphics[width=0.5\textwidth]
@@ -291,7 +291,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Experiment: Obstacle Avoidance}
+\begin{frame}{Experiment 2: Obstacle Avoidance}
 	\begin{figure}
 		\begin{subfigure}{0.42\textwidth}
 			\includegraphics[width=\linewidth]
@@ -327,7 +327,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Experiment: Unknown Environment}
+\begin{frame}{Experiment 3: Unknown Environment}
 	\begin{figure}
 		\begin{subfigure}{0.42\textwidth}
 			\includegraphics[width=\linewidth]
@@ -363,7 +363,7 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Experiment: Unknown Environment}
+\begin{frame}{Experiment 3: Unknown Environment}
 	\begin{center}
     tree size: 454 -- solution size: 10 -- runtime: 331 ms
   \end{center}
